[package]
name = "id2203_project"
version = "0.1.0"
edition = "2021"
authors = ["Mingxue Zhang <mingxue@kth.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/Flaxen/omnipaxos" }
sled = "0.34.7"
kompact = "0.11.0"
hocon = "0.7.0"
serial_test = "0.6.0"
rand = "0.8.4"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
bincode = "1.3.3"
tokio = { version = "1.11.0", features = ["full"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
#commitlog = "0.2.0"

[features]
batch_accept = []
latest_accepted = []
latest_decide = []
continued_leader_reconfiguration = []

default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]